--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.15.2"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.16.0",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
